--- a/main.css
+++ b/main.css
@@ -15,7 +15,81 @@
 }
 html {
   font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-blue);
+  height: 100vh;
+}
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+header {
+  text-align: center;
+  color: var(--white);
+  padding-bottom: 3rem;
+}
+header h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1;
+}
+header h1 span {
+  font-weight: 700;
+}
+section.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+form button {
+  padding: 1rem;
+  outline: none;
+  border: 1px solid white;
+  border-radius: 3px;
+  background-color: transparent;
+  color: var(--white);
+  font-size: 1.4rem;
+  font-weight: 700;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+form button:hover {
+  background-color: var(--color-sec);
+  color: var(--light-blue);
+}
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.452);
+  z-index: 1;
+}
+.modal-content {
+  width: 80%;
+  max-width: 60rem;
+  background-color: var(--white);
+  margin: 15% auto;
+  padding: 2rem;
+  border: 1px solid greenyellow;
+  text-align: center;
+  animation: slide ease 0.8s;
+}
+@keyframes slide {
+  from {
+    transform: translateY(-30);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
